# Laboratorio8_IngSoftware_RestaurantRewards

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  sonar-project.properties
config/: __init__.py  settings.py
consumer/: __init__.py  main_consumer.py
consumer/adapters/: __init__.py  in_memory_rewards_repository.py  rabbitmq_consumer_adapter.py
consumer/application/: __init__.py  rewards_service.py
consumer/domain/: __init__.py  models.py  rewards_calculator.py
consumer/ports/: __init__.py  message_consumer_port.py  rewards_repository_port.py
producer/: __init__.py  main_producer.py
producer/adapters/: __init__.py  rabbitmq_publisher_adapter.py
producer/application/: __init__.py  dinner_service.py
producer/domain/: __init__.py  models.py
producer/ports/: __init__.py  message_publisher_port.py
tests/: test_dinner_model.py  test_dinner_service.py  test_in_memory_repository.py  test_rewards_calculator.py  test_rewards_service.py  test_settings.py
