[project]
name = "restaurant-rewards"
version = "0.1.0"
description = "Sistema de recompensas de restaurante con Arquitectura Hexagonal y Orientada a Eventos"
requires-python = ">=3.10"
dependencies = [
    "pika>=1.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=producer --cov=consumer --cov=config --cov-report=xml --cov-report=term-missing"

[tool.coverage.run]
omit = [
    "tests/*",
    ".venv/*",
    "*/main_*.py",
    "config/__init__.py",
    # RabbitMQ adapters require a live broker — excluded from unit-test coverage
    "producer/adapters/rabbitmq_publisher_adapter.py",
    "consumer/adapters/rabbitmq_consumer_adapter.py",
    # Abstract ports (ABC bodies) have no executable statements
    "consumer/ports/message_consumer_port.py",
]
